{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 13,
  "lineage": "954b96c6-e7b4-e5d5-f560-80d2fbac483e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0d042d90c8c912c",
            "arn": "arn:aws:ec2:us-east-1:266735839891:elastic-ip/eipalloc-0a0d042d90c8c912c",
            "association_id": "eipassoc-0fff2cc9beefdadf8",
            "domain": "vpc",
            "id": "eipalloc-0a0d042d90c8c912c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0744bb532178d90e7",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-54-235-101-165.compute-1.amazonaws.com",
            "public_ip": "54.235.101.165",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "ai_sandbox_nat_eip"
            },
            "tags_all": {
              "Name": "ai_sandbox_nat_eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735839891:internet-gateway/igw-0cd1ba4178793b8e5",
            "id": "igw-0cd1ba4178793b8e5",
            "owner_id": "266735839891",
            "region": "us-east-1",
            "tags": {
              "Name": "ai_sandbox_igw"
            },
            "tags_all": {
              "Name": "ai_sandbox_igw"
            },
            "vpc_id": "vpc-0892ed0627e7a15ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0d042d90c8c912c",
            "association_id": "eipassoc-0fff2cc9beefdadf8",
            "connectivity_type": "public",
            "id": "nat-0e29f564811589be1",
            "network_interface_id": "eni-0744bb532178d90e7",
            "private_ip": "10.0.1.232",
            "public_ip": "54.235.101.165",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d5f92ec8b622a0d",
            "tags": {
              "Name": "ai_sandbox_nat_gw"
            },
            "tags_all": {
              "Name": "ai_sandbox_nat_gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735839891:route-table/rtb-09bd0a65333fa8722",
            "id": "rtb-09bd0a65333fa8722",
            "owner_id": "266735839891",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e29f564811589be1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai_sandbox_private_rt"
            },
            "tags_all": {
              "Name": "ai_sandbox_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892ed0627e7a15ab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "266735839891",
            "id": "rtb-09bd0a65333fa8722",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735839891:route-table/rtb-0860b14bc3d8a26c8",
            "id": "rtb-0860b14bc3d8a26c8",
            "owner_id": "266735839891",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd1ba4178793b8e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai_sandbox_public_rt"
            },
            "tags_all": {
              "Name": "ai_sandbox_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892ed0627e7a15ab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "266735839891",
            "id": "rtb-0860b14bc3d8a26c8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2727751246481c9",
            "region": "us-east-1",
            "route_table_id": "rtb-09bd0a65333fa8722",
            "subnet_id": "subnet-0293b8e15254bb640"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051e06690ac99efd7",
            "region": "us-east-1",
            "route_table_id": "rtb-0860b14bc3d8a26c8",
            "subnet_id": "subnet-08d5f92ec8b622a0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735839891:subnet/subnet-0293b8e15254bb640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0293b8e15254bb640",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "266735839891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ai_sandbox_private_subnet"
            },
            "tags_all": {
              "Name": "ai_sandbox_private_subnet"
            },
            "vpc_id": "vpc-0892ed0627e7a15ab"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "266735839891",
            "id": "subnet-0293b8e15254bb640",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735839891:subnet/subnet-08d5f92ec8b622a0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d5f92ec8b622a0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "266735839891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ai_sandbox_public_subnet"
            },
            "tags_all": {
              "Name": "ai_sandbox_public_subnet"
            },
            "vpc_id": "vpc-0892ed0627e7a15ab"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "266735839891",
            "id": "subnet-08d5f92ec8b622a0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735839891:vpc/vpc-0892ed0627e7a15ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d7d7da1af7f4600",
            "default_route_table_id": "rtb-0004cb8dc5d5f0790",
            "default_security_group_id": "sg-0d919b6334c16cf7d",
            "dhcp_options_id": "dopt-0cecd2c9a2e12ee76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0892ed0627e7a15ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0004cb8dc5d5f0790",
            "owner_id": "266735839891",
            "region": "us-east-1",
            "tags": {
              "Name": "ai_sandbox_vpc"
            },
            "tags_all": {
              "Name": "ai_sandbox_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "266735839891",
            "id": "vpc-0892ed0627e7a15ab",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}